tests/format/flow-repo/arith/exponent.js
/* @flow */

let x: number = 2 ** 3;
x **= 4;

let y: string = "123";
y **= 2; // error

1 + 2 ** 3 + 4;
2 ** 2;
(-2) ** 2;
